--- a/templates/disease.html
+++ b/templates/disease.html
@@ -193,6 +193,7 @@
             },
         };
         var barx = [['Disease','DALY'],['TB',specdaly[1]],['Malaria',specdaly[2]],['HIV',specdaly[3]],['Roundworm',specdaly[4]],['Hookworm',specdaly[5]],['Whipworm',specdaly[6]],['Schistosomiasis',specdaly[7]],['Onchocerciasis',specdaly[8]],['LF',specdaly[9]]];
+        alert(barx);
         var bararray = new google.visualization.DataTable();
             bararray.addColumn('string', 'Disease');
             bararray.addColumn('number','DALY');
