--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,3 +1,4 @@
+
 {% extends "layout.html" %}
 {% block title %}
 <title>Reports</title>
@@ -19,60 +20,48 @@
     </div>
 
 </div>
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+
+    var companyname = {{report2010 | safe}}
+    row = companyname[1];
+    google.charts.load('upcoming', {'packages':['geochart','corechart']});
+    google.charts.setOnLoadCallback(drawMap);
+    function drawMap() {
+      row = companyname[1];
+      var bardata = new google.visualization.DataTable();
+      bardata.addColumn('string','Country');
+      bardata.addColumn('number','Score');
+      bardata.addColumn({type: 'string', role: 'style'});
+      bardata.addRow(['TB',row[2],"color: #FFB31C"]);
+      bardata.addRow(['Malaria',row[3],"color: #0083CA"]);
+       var baroptions = {
+             legend:'none',
+             top: 0,
+             width: 400,
+             left: 200,
+             animation:{
+                 startup: true,
+                 duration: 1000,
+                 easing: 'out',
+             }
+         };
+      var barchart = new google.visualization.BarChart(document.getElementById('horbars'));
+      barchart.draw(bardata,baroptions);
+      document.getElementById('cntname').innerHTML = row[0];
+    }
+
+</script>
+
+
 <div class="row">
+<div  class="col-sm-6">
+        <p class="bluetxt text-center" id="cntname"></p>
+</div>
     <div class="col-sm-6">
-        <div class="contentbox">
-            <p class="redtxt">PICK A COMPANY:</p>
-            <p class="txtcontent">SanofiNovartis
-
-Pfizer</br>
-Shire</br>
-Hoffman-LaRoche</br>
-Boehringer Ingelheim</br>
-Bristol-Meyers Squibb</br>
-Viiv Healthcare</br>
-Merk</br>
-Gilead Science</br>
-Abbott Laboratories</br>
-Daiichi Sankyo</br>
-Chongqing Tonghe</br>
-Eli Lilly</br>
-Kyorin Co., Ltd</br>
-Bayer Healthcare</p>
-        </div>
-        <div class="contentbox">
-            <p class="redtxt">SCORE EXPLANATION REPORT:</p>
-            <p class="txtcontent">Learn more about the companies and drugs. It also explains the score break-down for each company.</p>
-            <table id="reporttab">
-                <tr>
-                    <td id="paperthumb">
-                        <a href="http://global-health-impact.org/src/Consumer%20and%20Ranking%20011615.pdf">
-                            <img src="static/img/ghi_company_report.jpg" width="100%"/>
-                        </a>
-                    </td>
-                    <td>
-                        <p class="abtlabel">Click on the paper to read more!</p>
-                    </td>
-                </tr>
-            </table>
-            <table id="reporttab">
-                <tr>
-                    <td id="paperthumb">
-                        <a href="http://global-health-impact.org/src/Company%20Ranking%20Only%20011615.pdf">
-                            <img src="static/img/ghi_ranking_explanation.jpg" width="100%"/>
-                        </a>
-                    </td>
-                    <td>
-                        <p class="abtlabel">Click on the paper to read more!</p>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="contentbox">
-
-        </div>
+         <div class="rgtpos" id="horbars" ></div>
     </div>
 </div>
+
 {% endblock %}
