--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -182,6 +182,14 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
+
+.rgtpos {
+   float: right; !important;
+   padding: 20px;
+   border: 102px;
+}
+
+
 .newsred {
     font-size: 24px;
     color: #FF7474;
