--- a/templates/reports.html
+++ b/templates/reports.html
@@ -24,7 +24,9 @@
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
 
-    var companyname = {{report2010 | safe}}
+    var reportsdata = {{report2010 | safe}}
+
+    var reportdetail = {{reportdetail2010 | safe }}
     row = companyname[1];
     google.charts.load('upcoming', {'packages':['geochart','corechart']});
     google.charts.setOnLoadCallback(drawMap);
