--- a/templates/reports.html
+++ b/templates/reports.html
@@ -27,17 +27,19 @@
     var reportsdata = {{report2010 | safe}}
 
     var reportdetail = {{reportdetail2010 | safe }}
-    row = companyname[1];
+
     google.charts.load('upcoming', {'packages':['geochart','corechart']});
     google.charts.setOnLoadCallback(drawMap);
     function drawMap() {
-      row = companyname[1];
+      row = reportdetail[0];
+      rowvalue = reportsdata[1];
+      console.log(row)
+      console.log(rowvalue)
       var bardata = new google.visualization.DataTable();
-      bardata.addColumn('string','Country');
-      bardata.addColumn('number','Score');
+      bardata.addColumn('string','Disease');
+      bardata.addColumn('number','Impact');
       bardata.addColumn({type: 'string', role: 'style'});
-      bardata.addRow(['TB',row[2],"color: #FFB31C"]);
-      bardata.addRow(['Malaria',row[3],"color: #0083CA"]);
+      bardata.addRow([row[4],row[5],"color: #FFB31C"]);
        var baroptions = {
              legend:'none',
              top: 0,
@@ -51,19 +53,96 @@
          };
       var barchart = new google.visualization.BarChart(document.getElementById('horbars'));
       barchart.draw(bardata,baroptions);
-      document.getElementById('cntname').innerHTML = row[0];
+      document.getElementById('rptScore').innerHTML = rowvalue[3];
+      document.getElementById('rptDrug').innerHTML = row[3];
+      document.getElementById('rptDisease').innerHTML = row[4];
     }
 
+    function rptClick(rownum){
+           // alert("Inside"+ rownum);
+            row = reportdetail[rownum-1];
+            rowvalue = reportsdata[rownum-1];
+            // alert("{{color}}");
+            var disColor = "color:"+"{{color}}";
+            var bardata = new google.visualization.DataTable();
+            bardata.addColumn('string','Disease');
+            bardata.addColumn('number','Impact');
+            bardata.addColumn({type: 'string', role: 'style'});
+            bardata.addRow([row[4],row[5],disColor]);
+            var baroptions = {
+                legend:'none',
+                top: 0,
+                width: 400,
+                animation:{
+                    startup: true,
+                    duration: 1000,
+                    easing: 'out',
+                }
+            };
+            var barchart = new google.visualization.BarChart(document.getElementById('horbars'));
+            barchart.draw(bardata,baroptions);
+            document.getElementById('rptScore').innerHTML = rowvalue[3];
+            document.getElementById('rptDrug').innerHTML = row[3];
+            document.getElementById('rptDisease').innerHTML = row[4];
+        };
 </script>
 
 
 <div class="row">
 <div  class="col-sm-6">
         <p class="bluetxt text-center" id="cntname"></p>
+     {% for rpt in report2010 %}
+            <a onclick="rptClick({{rpt.0}})">
+                <div style="padding-top: 1px; font-family: 'Nunito','sans-serif';">{{ rpt.2 }}</div>
+            </a>
+        {% endfor %}
 </div>
     <div class="col-sm-6">
+        <div style="width:250px;">
+         <div style="width:50px; float:left;"><b> Score :</b> </div>
+         <div style="width:200px; float:right;" id="rptScore"></div>
+        </div><br>
+         <div  style="width:250px;">
+         <div style="width:50px; float:left;"><b> Drug :</b> </div>
+         <div style="width:200px; float:right;" id="rptDrug"></div>
+        </div><br>
+         <div  style="width:270px;">
+         <div style="width:70px; float:left;"><b> Disease : </b> </div>
+         <div style="width:200px; float:right;" id="rptDisease"></div>
+        </div>
          <div class="rgtpos" id="horbars" ></div>
     </div>
 </div>
-
+<div class="row">
+    <div class="col-sm-6">
+ <div class="contentbox">
+            <p class="redtxt">SCORE EXPLANATION REPORT:</p>
+             <p class="txtcontent">Learn more about the companies and drugs. It also explains the score break-down for each company.</p>
+             <table id="reporttab">
+                <tr>
+                    <td id="paperthumb">
+                        <a href="http://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0141374&type=printable">
+                            <img src="static/img/ExtendingAccessThumb.jpg" width="100%"/>
+                        </a>
+                    </td>
+                    <td>
+                        <p class="abtlabel">Click on the paper to read more!</p>
+                    </td>
+                </tr>
+            </table>
+      <table id="reporttab">
+                <tr>
+                    <td id="paperthumb">
+                        <a href="http://global-health-impact.org/src/Company%20Ranking%20Only%20011615.pdf">
+                            <img src="static/img/ghi_ranking_explanation.jpg" width="100%"/>
+                        </a>
+                    </td>
+                    <td>
+                        <p class="abtlabel">Click on the paper to read more!</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock %}
