update and revert functionality

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,6 +51,7 @@
                 <a href="/resources">RESOURCES</a>
                 <a href="/methodology">METHODOLOGY</a>
                 <a href="/organization">ORGANIZATION</a>
+                <a href="/account">ACCOUNT MANAGEMENT</a>
             </div>
         </div>
         <div class="dropdown">
